fix: restore room state for staged gameplay